<?xml version="1.0"?>
<package format="2">
  <name>arm_services</name>
  <version>0.0.0</version>
  <description>The arm_services package: starts all packages needed for reground arm control</description>
  <author email="gjulian@uos.de">Julian Gaal</author>
  <maintainer email="gjulian@uos.de">Julian Gaal</maintainer>
  <license>GNU General Public License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>jaco_manipulation</build_depend>
  <build_depend>reground_api</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>jaco_manipulation</build_export_depend>
  <build_export_depend>reground_api</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>jaco_manipulation</exec_depend>
  <exec_depend>reground_api</exec_depend>
  <exec_depend>roscpp</exec_depend>
</package>
